example/server/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dump-env-vars
spec:
  selector:
    matchLabels:
      app: dump-env-vars
  template:
    metadata:
      annotations:
        # We end up deleting this, but it's still used. Which implies the downward API is evaluated earlier than that.
        differentpla.net/foo: bar
        differentpla.net/copy-node-labels: topology
        # If I add the annotation myself, we're golden, and it uses this value.
        topology.kubernetes.io/zone: us-central-1b
      labels:
        app: dump-env-vars
    spec:
      containers:
        - name: dump-env-vars
          image: docker.k3s.differentpla.net/dump-env-vars
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
