example/server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dump-env-vars
  namespace: default
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: dump-env-vars
